[panel]: add wings binary updates in panel
